--- a/src/main/webapp/account/accountPage.xhtml
+++ b/src/main/webapp/account/accountPage.xhtml
@@ -20,6 +20,7 @@
                 <ui:include src="createAccount.xhtml" />
             </ui:insert>
         </div>
+        <h:commandButton id="show" value="addAccount" onclick="ice.ace.instance('addAccount').show();" type="button"/>
         <h:commandButton value="Back to Homepage"/>
     </h:body>
 </html>
