--- a/src/main/webapp/menu/main.xhtml
+++ b/src/main/webapp/menu/main.xhtml
@@ -13,7 +13,7 @@
                     <ace:submenu label="Actions">
                         <ace:menuItem value="Users" url="user/userPage.xhtml"/>
                         <ace:menuItem value="Account" url="account/accountPage.xhtml"/>
-                        <ace:menuItem value="Trasaction" url="transaction/transactionPage.xhtml"/>
+                        <ace:menuItem value="Transaction" url="transaction/transactionPage.xhtml"/>
                     </ace:submenu>
                 </ace:menu>
             </h:form>
