--- a/src/main/webapp/transaction/transactionPage.xhtml
+++ b/src/main/webapp/transaction/transactionPage.xhtml
@@ -11,8 +11,8 @@
     </h:head>
     <h:body>
         <div id="transactionsList">
-            <ui:insert name="transactionsList" >
-                <ui:include src="transactionsList.xhtml" />
+            <ui:insert name="virtualTransactionsList" >
+                <ui:include src="virtualTransactionsList.xhtml" />
             </ui:insert>
         </div>
         <div id="createTrasnaction">
