--- a/src/main/webapp/user/userPage.xhtml
+++ b/src/main/webapp/user/userPage.xhtml
@@ -21,7 +21,9 @@
             </ui:insert>
         </div>
 
+        <h:form>
         <h:commandButton value="Back to Homepage"/>
+        </h:form>
     </h:body>
 </html>
 
