--- a/src/main/webapp/account/accountList.xhtml
+++ b/src/main/webapp/account/accountList.xhtml
@@ -10,7 +10,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-                <ui:composition>
+        <ui:composition>
             <h:form id="accountForm">
                 <ace:dataTable id="accountTable"
                                value="#{accountController.accountsList}"
@@ -22,21 +22,25 @@
                     <ace:column id="id" headerText="ID" sortBy="#{account.id}"
                                 filterBy="#{account.id}" filterMatchMode="contains">
                         <h:outputText id="idCell" value="#{account.id}"/>
-                        </ace:column>
+                    </ace:column>
                     <ace:column id="username" headerText="username" sortBy="#{account.user.username}"
                                 filterBy="#{account.user.username}" filterMatchMode="contains">
                         <h:outputText id="usernameCell" value="#{account.user.username}"/>
-                        </ace:column>       
-                    
+                    </ace:column>       
+
                     <ace:column id="balance" headerText="balance" sortBy="#{account.balance}"
                                 filterBy="#{account.balance}" filterMatchMode="contains">
                         <h:outputText id="balanceCell" value="#{account.balance}"/>
-                        </ace:column>       
-                        <ace:column id="options" headerText="Options">
-                            <h:commandButton id="deleteAccountButton" actionListener="#{accountController.delete}">
-                                <f:param name="id" value="#{accountController.accountId}"/>
-                            </h:commandButton>
-                        </ace:column>
+                    </ace:column>       
+                    <ace:column id="currency" headerText="currency" sortBy="#{account.currency}"
+                                filterBy="#{account.currency}" filterMatchMode="contains">
+                        <h:outputText id="currencyCell" value="#{account.currency.type}"/>
+                    </ace:column>
+                    <ace:column id="options" headerText="Options">
+                        <h:commandButton id="deleteAccountButton" actionListener="#{accountController.delete}">
+                            <f:param name="id" value="#{account.id}"/>
+                        </h:commandButton>
+                    </ace:column>
                 </ace:dataTable>
             </h:form>
         </ui:composition>
