--- a/src/main/webapp/menu/main.xhtml
+++ b/src/main/webapp/menu/main.xhtml
@@ -11,9 +11,11 @@
             <h:form>
                 <ace:menu>
                     <ace:submenu label="Actions">
-                        <ace:menuItem value="Users" url="user/userPage.xhtml"/>
-                        <ace:menuItem value="Account" url="account/accountPage.xhtml"/>
-                        <ace:menuItem value="Transaction" url="transaction/transactionPage.xhtml"/>
+                        <ace:menuItem value="Home" url="http://localhost:8080/FinanManager/welcome.xhtml"/>
+                        <ace:menuItem value="Users" url="http://localhost:8080/FinanManager/user/userPage.xhtml"/>
+                        <ace:menuItem value="Account" url="http://localhost:8080/FinanManager/account/accountPage.xhtml"/>
+                        <ace:menuItem value="Transaction" url="http://localhost:8080/FinanManager/transaction/transactionPage.xhtml"/>
+                        <ace:menuItem value="History" url="http://localhost:8080/FinanManager/transaction/historyPage.xhtml"/>
                     </ace:submenu>
                 </ace:menu>
             </h:form>
