--- a/src/main/webapp/transaction/virtualTransactionsList.xhtml
+++ b/src/main/webapp/transaction/virtualTransactionsList.xhtml
@@ -23,9 +23,9 @@
                                 filterBy="#{transaction.id}" filterMatchMode="contains">
                         <h:outputText id="idCell" value="#{transaction.id}"/>
                     </ace:column>
-                    <ace:column id="category" headerText="category" sortBy="#{transaction.category}"
-                                filterBy="#{transaction.category}" filterMatchMode="contains">
-                        <h:outputText id="categoryCell" value="#{transaction.category}"/>
+                    <ace:column id="category" headerText="category" sortBy="#{transaction.category.categoryId}"
+                                filterBy="#{transaction.category.categoryId}" filterMatchMode="contains">
+                        <h:outputText id="categoryCell" value="#{transaction.category.categoryId}"/>
                     </ace:column>       
 
                     <ace:column id="balance" headerText="transferedMoney" sortBy="#{transaction.cash}"
