--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -7,10 +7,10 @@
       xmlns:icecore="http://www.icefaces.org/icefaces/core"
       xmlns:ace="http://www.icefaces.org/icefaces/components">
     <h:head>
-        <title>Users accounts manager page</title>
+        <title>Financial Manager Home Page</title>
     </h:head>
     <h:body>
-
+        
         <div id="mainmenu">
             <ui:insert name="mainmenu" >
                 <ui:include src="menu/main.xhtml" />
