--- a/src/main/webapp/menu/main.xhtml
+++ b/src/main/webapp/menu/main.xhtml
@@ -16,6 +16,7 @@
                         <ace:menuItem value="Account" url="http://localhost:8080/FinanManager/account/accountPage.xhtml"/>
                         <ace:menuItem value="Transaction" url="http://localhost:8080/FinanManager/transaction/transactionPage.xhtml"/>
                         <ace:menuItem value="History" url="http://localhost:8080/FinanManager/transaction/historyPage.xhtml"/>
+                        <ace:menuItem value="Saldo" url="http://localhost:8080/FinanManager/functions/saldoPage.xhtml"/>
                     </ace:submenu>
                 </ace:menu>
             </h:form>
